test/error/0004-tags3.c
/*
PATTERN: tag
PATTERN: c:7:
*/

enum   X;
struct X;
